[metadata]
name = python-test-project1
version = attr: project.__version__
description = My test python project
description-file = README.md
url = ?
license = ?
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
long_description = Library for testing python

[options]
include_package_data = True
packages = find:
install_requires =
    pygithub

[options.packages.find]
exclude =
    test.*
    test

[bdist_wheel]
universal = 1

[options.extras_require]
dev =
    flake8
    pytest
    bandit
    pylint
    tox
    coverage
    pytest-cov
    pygithub

[tox:tox]
envlist = py38

[testenv]
skip_install = True
sitepackages = True
whitelist_externals=
    {[testenv:lint]whitelist_externals}
deps =
    {[options.extras_require]dev}
commands =
    {[testenv:test]commands}
    {[testenv:sec]commands}
    {[testenv:lint]commands}

[testenv:test]
skip_install = True
sitepackages = True
deps =
    {[options.extras_require]dev}
commands =
    coverage erase
    coverage run --source project -m pytest tests/
    coverage report -m
    coverage xml

[testenv:lint]
skip_install = True
whitelist_externals=
    flake8
    pylint
deps =
    {[options.extras_require]dev}
commands =
    flake8 ./project tests/
    pylint ./project tests/

[testenv:sec]
skip_install = True
deps = bandit
commands =
    bandit -r ./project